--- a/index.html
+++ b/index.html
@@ -60,28 +60,31 @@
                         <h6>Gênero:</h6>
                     </div>
 
-                    <div class="gender-group">
-                        <div class="gender-input">
-                            <input type="radio" name="gender" id="female">
-                            <label for="female">Feminino</label>
+                    <div class="gender-group-container">
+
+                        <div class="gender-group">
+                            <div class="gender-input">
+                                <input type="radio" name="gender" id="female">
+                                <label for="female">Feminino</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="gender-group">
-                        <div class="gender-input">
-                            <input type="radio" name="gender" id="male">
-                            <label for="male">Masculino</label>
+                        <div class="gender-group">
+                            <div class="gender-input">
+                                <input type="radio" name="gender" id="male">
+                                <label for="male">Masculino</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="gender-group">
-                        <div class="gender-input">
-                            <input type="radio" name="gender" id="others">
-                            <label for="others">Outros</label>
+                        <div class="gender-group">
+                            <div class="gender-input">
+                                <input type="radio" name="gender" id="others">
+                                <label for="others">Outros</label>
+                            </div>
                         </div>
-                    </div>
-                    <div class="gender-group">
-                        <div class="gender-input">
-                            <input type="radio" name="gender" id="none">
-                            <label for="none">Prefiro não dizer</label>
+                        <div class="gender-group">
+                            <div class="gender-input">
+                                <input type="radio" name="gender" id="none">
+                                <label for="none">Prefiro não dizer</label>
+                            </div>
                         </div>
                     </div>
                  </div>
