--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <h1>Cadastre-se</h1>
                     </div>
                     <div class="login-button">
-                        <button><a href="#">Entrar</a></button>
+                        <button><a href="login/login.html">Entrar</a></button>
                     </div>
                 </div>
 
